<resources>
    <string name="app_name">Whatsapp Clone</string>
    <string name="txtCopia">Clone</string>
    <string name="hintNome">Digite seu nome</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="txtValidacao">Validação</string>
    <string name="txtValidacaoExplicacao">Você recebeu um SMS para validação do seu número, digite o código de validação abaixo:</string>
    <string name="hintValidacaoCodigo">Digite o código</string>
    <string name="btnValidar">Validar</string>
    <string name="erro_permissao">O app não tem permissão para enviar mensagens</string>
    <string name="envio_ok">Menssagem enviada</string>
    <string name="erro_envio">Mensagem não pode ser enviada</string>
    <string name="mensagem_token">Seu token é </string>
    <string name="token_ok">Token validado</string>
    <string name="erro_token">O token não é válido</string>
    <string name="hintSenha">Digite sua senha</string>
    <string name="btnLogar">Logar</string>
    <string name="txtCadastro">Não tem conta? Cadastre-se!</string>
    <string name="hintEmail">Digite seu email</string>
    <string name="cadastroUsuario_ok">Usuário cadastrado com sucesso</string>
    <string name="erro_cadastroUsuario">Não foi possível cadastrar o usuário</string>
    <string name="erro_cadastroUsuario_senhaFraca">Erro! A sua senha deve ter pelo menos 6 caracteres</string>
    <string name="erro_cadastroUsuario_emailMalFormado">Erro! Email inválido</string>
    <string name="erro_cadastroUsuario_emailJaCadastrado">Erro! Email já cadastrado</string>
    <string name="login_ok">Login feito com sucesso</string>
    <string name="erro_login">Não foi possível fazer login</string>
    <string name="btnSair">Sair</string>
    <string name="opcao_sair">Sair</string>
    <string name="opcao_configuracao">Configurações</string>
    <string name="opcao_pesquisar">Pesquisar</string>
    <string name="opcao_adicionar">Adicionar</string>
    <string name="conversas_fragment">Conversas</string>
    <string name="contatos_fragment">Contatos</string>
    <string name="alertdialog_main_adicionarcontato_titulo">Novo Contato</string>
    <string name="alertdialog_main_adicionarcontato_mensagem">Email do usuário</string>
    <string name="alertdialog_main_adicionarcontato_btn_positivo">Cadastrar</string>
    <string name="alertdialog_main_adicionarcontato_btn_negativo">Cancelar</string>
    <string name="erro_alertdialog_main_adicionarcontato_emailvazio">Por favor! Preencha o email</string>
    <string name="erro_alertdialog_main_adicionarcontato_emailnaocadastrado">Usuário não possui cadastro</string>
    <string name="erro_mensagem_vazia">"Digite uma mensagem antes de enviar"</string>
    <string name="erro_mensagem_envio">"A mensagem não pode ser enviada"</string>
    <string name="erro_conversa_envio">"A conversar não pode ser aberta"</string>
</resources>
