<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.CadastroMainActivity">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="@dimen/logoWidth"
        android:layout_height="@dimen/logoHeight"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txtComplementoNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txtComplementoNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtCopia"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <EditText
        android:id="@+id/nPais"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/elementsMediumSpace"
        android:ems="10"
        android:hint="+55"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrar"
        app:layout_constraintStart_toStartOf="@+id/txtNome"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

    <EditText
        android:id="@+id/nEstado"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="84"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintStart_toEndOf="@+id/nPais"
        app:layout_constraintTop_toTopOf="@+id/nPais" />

    <EditText
        android:id="@+id/nNumero"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="99998888"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintStart_toEndOf="@+id/nEstado"
        app:layout_constraintTop_toTopOf="@+id/nEstado" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/elementsMediumSpace"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_background"
        android:text="@string/btnCadastrar"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nPais" />

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hintNome"
        app:layout_constraintBottom_toTopOf="@+id/nPais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtComplementoNome" />
</androidx.constraintlayout.widget.ConstraintLayout>